# vulkan_vibe

./: .gitignore  Cargo.toml  README.md  build.rs
assets/: icon.icns
shaders/: frag.glsl  vert.glsl  vert.spv
src/: main.bk.rs  main.rs
