[package]
name = "vulkan_vibe_coding"           # The name of your project
version = "0.1.0"             # The version of your project
edition = "2021"              # The Rust edition (2021 rules for syntax/features)

[dependencies]                # Libraries your project needs to run
winit = "0.30.9"              # For creating and managing windows
ico = "0.4"                   # For handling .ico (icon) files
ash = "0.38"                  # For interacting with Vulkan (the graphics API)
icns = "0.3.1"  # For macOS ICNS parsing at runtime
glam = "0.30"
bytemuck = "1.22.0"  # For vector math

[build-dependencies]          # Libraries needed only during the build process
winresource = "0.1.19"        # For embedding Windows-specific resources (like icons) into the binary