[package]
name = "vulkan_vibe_coding"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.30.9"
ico = "0.4"
ash = "0.38"  # No features needed for VK_KHR_metal_surface
icns = "0.3.1"
glam = "0.30"
bytemuck = "1.22.0"
objc = "0.2.7"
metal = "0.29.0"  # For CAMetalLayer type

[build-dependencies]
winresource = "0.1.19"