[package]
name = "vulkan_vibe_coding"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.30.9"
ash = "0.38"
ico = "0.4.0"
icns = "0.3.1"
glam = "0.30.0"
bytemuck = "1.16.1"

[dependencies.objc]
version = "0.2.7"
features = []
[target.'cfg(target_os = "macos")'.dependencies.objc]
version = "0.2.7"

[build-dependencies]
winresource = "0.1.19"